# IntelliKick

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Draw_io_diagramms.xml  Makefile  NeuralKicker  NeuralKicker.cbp  Pong.cpp  Pong.h  README.md  cmake_install.cmake  grapher.cpp  grapher.h  main.cpp  main.h
